--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
     var s = document.createElement("script");
     s.async = true;
     s.src = "https://script.google.com/macros/s/" + tc + "/dev/library?tn=" + tn;
-    document.body.appendChild(s);
+    document.head.appendChild(s);
   }
 })("tracker", "AKfycbwlHy7IdEFxuUQ9tgPuRhY9flRi-pen1-PWeQ64KcDdhqRO-cLK28BH3xeQCDvrWCrJ", "_trackerCk");
 
