--- a/index.html
+++ b/index.html
@@ -2603,7 +2603,9 @@ id.map(x => {
 }
 ) //tagueia as redes sociais do criadores 
     
-    
+document.addEventListener("load", () => {
+    console.log("oi")
+})    
 
   
   </script>
