--- a/index.html
+++ b/index.html
@@ -2603,8 +2603,8 @@ id.map(x => {
 }
 ) //tagueia as redes sociais do criadores 
     
-document.addEventListener("load", () => {
-    console.log("oi")
+window.addEventListener("load", () => {
+    tracker.send("load")
 })    
 
   
