--- a/index.html
+++ b/index.html
@@ -2558,11 +2558,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     })(jQuery); // End of use strict
 
-    if(window.setTimeout(function() {
+    window.setTimeout(function() {
       var element = document.getElementById('call-me-baby');
       element.style.right = '20px';
-    }, Math.random() * 12000 + 5000);){
-tracker.send("funcionou")}
+    }, Math.random() * 12000 + 5000);)
     
     
   </script>
