--- a/index.html
+++ b/index.html
@@ -2716,7 +2716,7 @@ document.querySelector("#contactForm > div > div.col-lg-12.text-center > button"
     }, 1)
 })
 
-//se o input foi alterado de forma correta ou incorreta
+/*se o input foi alterado de forma correta ou incorreta
 let input_all = Array.from(document.querySelectorAll('.form-control'))
 input_all.map((x) =>{
   x.addEventListener("change", (evt) => {
@@ -2732,7 +2732,7 @@ input_all.map((x) =>{
     label: `INCOMPLETE: ${x.id}`
   })}
 })
-})
+})*/
 
 //section portifolio click
 let port = Array.from(document.getElementsByClassName("portfolio-link"))
