--- a/index.html
+++ b/index.html
@@ -2695,7 +2695,7 @@ b.map(x => {
 //tag pageview
 tracker.send("pageview") 
     
-//se a mensagem é enviada com sucesso ou falha
+/*se a mensagem é enviada com sucesso ou falha
 document.querySelector("#contactForm > div > div.col-lg-12.text-center > button").addEventListener("click", evt => {
     setTimeout(() => {
         let a = evt.path[3].className
@@ -2714,7 +2714,7 @@ document.querySelector("#contactForm > div > div.col-lg-12.text-center > button"
             })
         }
     }, 1)
-})
+})*/
 
 /*se o input foi alterado de forma correta ou incorreta
 let input_all = Array.from(document.querySelectorAll('.form-control'))
